[package]
name = "music-organizer"
description = "A program that organizes a directory into subdirectories by categories"
author = "catink123"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.21", features = ["derive"] }
id3 = "1.7.0"
regex = "1.9.3"
